--- a/tests/test.yml
+++ b/tests/test.yml
@@ -7,5 +7,8 @@
     - hswong3i.apt
     - hswong3i.hostname
     - hswong3i.locales
-    - hswong3i.tzdata
     - hswong3i.ntp
+    - hswong3i.tzdata
+    - hswong3i.ufw
+    - hswong3i.usermin
+    - hswong3i.webmin
