--- a/tests/test.yml
+++ b/tests/test.yml
@@ -4,10 +4,16 @@
 - hosts: localhost
   remote_user: root
   roles:
+    - hswong3i.apache2
     - hswong3i.apt
     - hswong3i.hostname
+    - hswong3i.java
     - hswong3i.locales
+    - hswong3i.mysql
     - hswong3i.ntp
+    - hswong3i.php
+    - hswong3i.php_fpm
+    - hswong3i.postgresql
     - hswong3i.tzdata
     - hswong3i.ufw
     - hswong3i.usermin
