Update test with *_vhosts.

--- a/tests/test.yml
+++ b/tests/test.yml
@@ -5,6 +5,7 @@
   remote_user: root
   roles:
     - hswong3i.apache2
+    - hswong3i.apache2_vhosts
     - hswong3i.apt
     - hswong3i.hostname
     - hswong3i.java
@@ -12,6 +13,7 @@
     - hswong3i.mysql
     - hswong3i.ntp
     - hswong3i.php
+    - hswong3i.php_vhosts
     - hswong3i.postgresql
     - hswong3i.tzdata
     - hswong3i.ufw
