--- a/tests/test.yml
+++ b/tests/test.yml
@@ -11,6 +11,7 @@
     - hswong3i.java
     - hswong3i.locales
     - hswong3i.mysql
+    - hswong3i.mysql_vhosts
     - hswong3i.ntp
     - hswong3i.php
     - hswong3i.php_vhosts
