Minor doc update.

--- a/.roles.yml
+++ b/.roles.yml
@@ -2,14 +2,18 @@
 # roles file for ubuntu
 
 - src: hswong3i.apache2
+- src: hswong3i.apache2_vhosts
 - src: hswong3i.apt
 - src: hswong3i.hostname
 - src: hswong3i.java
 - src: hswong3i.locales
 - src: hswong3i.mysql
+- src: hswong3i.mysql_vhosts
 - src: hswong3i.ntp
 - src: hswong3i.php
+- src: hswong3i.php_vhosts
 - src: hswong3i.postgresql
+- src: hswong3i.postgresql_vhosts
 - src: hswong3i.tzdata
 - src: hswong3i.ufw
 - src: hswong3i.usermin
