sync update .roles.yml

--- a/.roles.yml
+++ b/.roles.yml
@@ -4,10 +4,18 @@
 - src: hswong3i.apache2
 - src: hswong3i.apache2_vhosts
 - src: hswong3i.apt
+- src: hswong3i.bamboo
+- src: hswong3i.bitbucket
+- src: hswong3i.confluence
+- src: hswong3i.crowd
+- src: hswong3i.drupal
+- src: hswong3i.fisheye
 - src: hswong3i.hostname
 - src: hswong3i.java
+- src: hswong3i.jira
 - src: hswong3i.locales
 - src: hswong3i.mysql
+- src: hswong3i.mysql_connector_java
 - src: hswong3i.mysql_vhosts
 - src: hswong3i.ntp
 - src: hswong3i.php
