--- a/playbooks/php-install.yml
+++ b/playbooks/php-install.yml
@@ -5,8 +5,11 @@
   roles:
     - hswong3i.php
     - role: hswong3i.composer
-      composer_global_require:
-        - "drush/drush:@stable"
-        - "fabpot/php-cs-fixer:@stable"
-        - "phpunit/phpunit:@stable"
-        - "sami/sami:@stable"
+      composer_global: 
+        - { status: "remove", name: "fabpot/php-cs-fixer" }
+        - { status: "require", name: "drupal/coder:@stable" }
+        - { status: "require", name: "drupal/console:@stable" }
+        - { status: "require", name: "drush/drush:@stable" }
+        - { status: "require", name: "friendsofphp/php-cs-fixer:@stable" }
+        - { status: "require", name: "phpunit/phpunit:@stable" }
+        - { status: "require", name: "sami/sami:@stable" }
