--- a/.gitmodules
+++ b/.gitmodules
@@ -102,3 +102,6 @@
 	path = roles/hswong3i.composer
 	url = https://github.com/pantarei/ansible-role-composer.git
 	branch = master
+[submodule "roles/hswong3i.varnish"]
+	path = roles/hswong3i.varnish
+	url = https://github.com/pantarei/ansible-role-varnish.git
