--- a/playbooks/setup-infrastructure.yml
+++ b/playbooks/setup-infrastructure.yml
@@ -2,6 +2,7 @@
 
 - include: apache2-install.yml
 - include: java-install.yml
+- include: memcached-install.yml
 - include: mysql-install.yml
 - include: php-install.yml
 - include: postgresql-install.yml
