add nfs to playbooks/setup-infrastructure.yml

--- a/playbooks/setup-infrastructure.yml
+++ b/playbooks/setup-infrastructure.yml
@@ -4,6 +4,7 @@
 - include: java-install.yml
 - include: memcached-install.yml
 - include: mysql-install.yml
+- include: nfs-install.yml
 - include: php-install.yml
 - include: postgresql-install.yml
 - include: varnish-install.yml
