--- a/playbooks/varnish-install.yml
+++ b/playbooks/varnish-install.yml
@@ -6,4 +6,5 @@
     - hswong3i.varnish
     - role: hswong3i.ufw
       ufw_to_port:
+        - { to_port: "{{ varnish_admin_port }}", proto: "tcp", rule: "allow" }
         - { to_port: "{{ varnish_listen_port }}", proto: "tcp", rule: "allow" }
