--- a/playbooks/setup-infrastructure.yml
+++ b/playbooks/setup-infrastructure.yml
@@ -1,6 +1,7 @@
 ---
 
 - include: apache2-install.yml
+- include: cachefilesd-install.yml
 - include: java-install.yml
 - include: memcached-install.yml
 - include: mysql-install.yml
