--- a/playbooks/mysql-install.yml
+++ b/playbooks/mysql-install.yml
@@ -7,3 +7,4 @@
     - role: hswong3i.ufw
       ufw_to_port:
         - { to_port: "{{ mysql_port }}", proto: "tcp", rule: "allow" }
+  when: inventory_hostname not in groups['mariadb']
