--- a/playbooks/setup-infrastructure.yml
+++ b/playbooks/setup-infrastructure.yml
@@ -3,6 +3,7 @@
 - include: apache2-install.yml
 - include: cachefilesd-install.yml
 - include: java-install.yml
+- include: mariadb-install.yml
 - include: memcached-install.yml
 - include: mysql-install.yml
 - include: nfs-install.yml
