--- a/playbooks/mysql-install.yml
+++ b/playbooks/mysql-install.yml
@@ -3,8 +3,9 @@
 - hosts: mysql
   remote_user: root
   roles:
-    - hswong3i.mysql
+    - role: hswong3i.mysql
+      when: inventory_hostname not in groups['mariadb']
     - role: hswong3i.ufw
       ufw_to_port:
         - { to_port: "{{ mysql_port }}", proto: "tcp", rule: "allow" }
-  when: inventory_hostname not in groups['mariadb']
+      when: inventory_hostname not in groups['mariadb']
