--- a/playbooks/mysql-install.yml
+++ b/playbooks/mysql-install.yml
@@ -4,8 +4,8 @@
   remote_user: root
   roles:
     - role: hswong3i.mysql
-      when: inventory_hostname not in groups['mariadb']
+      when: groups['mariadb'] is not defined or inventory_hostname not in groups['mariadb']
     - role: hswong3i.ufw
       ufw_to_port:
         - { to_port: "{{ mysql_port }}", proto: "tcp", rule: "allow" }
-      when: inventory_hostname not in groups['mariadb']
+      when: groups['mariadb'] is not defined or inventory_hostname not in groups['mariadb']
