add gluster and nfs_ganesha

--- a/.gitmodules
+++ b/.gitmodules
@@ -130,3 +130,11 @@
 	path = roles/hswong3i.mount
 	url = https://github.com/pantarei/ansible-role-mount.git
 	branch = master
+[submodule "roles/hswong3i.gluster"]
+	path = roles/hswong3i.gluster
+	url = https://github.com/pantarei/ansible-role-gluster.git
+	branch = master
+[submodule "roles/hswong3i.nfs_ganesha"]
+	path = roles/hswong3i.nfs_ganesha
+	url = https://github.com/pantarei/ansible-role-nfs-ganesha.git
+	branch = master
