rename role as ganesha

--- a/.gitmodules
+++ b/.gitmodules
@@ -134,7 +134,7 @@
 	path = roles/hswong3i.gluster
 	url = https://github.com/pantarei/ansible-role-gluster.git
 	branch = master
-[submodule "roles/hswong3i.nfs_ganesha"]
-	path = roles/hswong3i.nfs_ganesha
-	url = https://github.com/pantarei/ansible-role-nfs-ganesha.git
+[submodule "roles/hswong3i.ganesha"]
+	path = roles/hswong3i.ganesha
+	url = https://github.com/pantarei/ansible-role-ganesha.git
 	branch = master
