split mount point related to set-service.yml

--- a/.gitmodules
+++ b/.gitmodules
@@ -138,3 +138,7 @@
 	path = roles/hswong3i.gluster_volume
 	url = https://github.com/pantarei/ansible-role-gluster-volume.git
 	branch = master
+[submodule "roles/hswong3i.nfs_exports"]
+	path = roles/hswong3i.nfs_exports
+	url = https://github.com/pantarei/ansible-role-nfs-exports.git
+	branch = master
