--- a/playbooks/setup-service.yml
+++ b/playbooks/setup-service.yml
@@ -1,4 +1,19 @@
 ---
 
+# First setup gluster/nfs volume as mount point.
+- include: nfs-exports.yml
+- include: gluster-volume.yml
+
+# Then setup remote mount to gluster/nfs volume.
+- include: mount.yml
+
+# Finally, other else services.
+- include: bamboo-install.yml
+- include: bitbucket-install.yml
+- include: confluence-install.yml
+- include: crowd-install.yml
+- include: drupal-install.yml
+- include: fisheye-install.yml
+- include: jira-install.yml
 - include: usermin-install.yml
 - include: webmin-install.yml
