--- a/playbooks/gluster-stop.yml
+++ b/playbooks/gluster-stop.yml
@@ -9,7 +9,7 @@
         state: "stopped"
       with_items: "{{ gluster_volume }}"
       run_once: yes
-      ignore_erros: yes
+      ignore_errors: yes
 
     - name: stop all nodes
       service:
