--- a/playbooks/gluster-start.yml
+++ b/playbooks/gluster-start.yml
@@ -12,6 +12,7 @@
       gluster_volume:
         name: "{{ item.name }}"
         state: "started"
+        force: "yes"
       with_items: "{{ gluster_volume }}"
       run_once: yes
       ignore_errors: yes
