--- a/playbooks/gluster-restart.yml
+++ b/playbooks/gluster-restart.yml
@@ -1,27 +1,4 @@
 ---
 
-- hosts: gluster
-  remote_user: root
-  tasks:
-    - name: stop all volumes
-      gluster_volume:
-        name: "{{ item.name }}"
-        state: "stopped"
-        force: "yes"
-      with_items: "{{ gluster_volume }}"
-      run_once: yes
-      ignore_errors: yes
-
-    - name: restart all nodes
-      service:
-        name: "glusterfs-server"
-        state: "restarted"
-
-    - name: start all volumes
-      gluster_volume:
-        name: "{{ item.name }}"
-        state: "started"
-        force: "yes"
-      with_items: "{{ gluster_volume }}"
-      run_once: yes
-      ignore_errors: yes
+- include: gluster-stop.yml
+- include: gluster-start.yml
