--- a/playbooks/gluster-start.yml
+++ b/playbooks/gluster-start.yml
@@ -5,8 +5,11 @@
   tasks:
     - name: start all nodes
       service:
-        name: "glusterfs-server"
+        name: "{{ item }}"
         state: "started"
+      with_items:
+        - "rpcbind"
+        - "glusterfs-server"
 
     - name: start all volumes
       gluster_volume:
