--- a/playbooks/gluster-stop.yml
+++ b/playbooks/gluster-stop.yml
@@ -14,5 +14,8 @@
 
     - name: stop all nodes
       service:
-        name: "glusterfs-server"
+        name: "{{ item }}"
         state: "stopped"
+      with_items:
+        - "glusterfs-server"
+        - "rpcbind"
