--- a/playbooks/setup-service.yml
+++ b/playbooks/setup-service.yml
@@ -1,8 +1,11 @@
 ---
 
-# First setup gluster/nfs volume as mount point.
-- include: nfs-exports.yml
+# First setup gluster volume.
 - include: gluster-volume.yml
 
-# Then setup remote mount to gluster/nfs volume.
+# Then setup ganesha/nfs export as mount point.
+- include: ganesha-export.yml
+- include: nfs-export.yml
+
+# Finally setup remote mount to ganesha/nfs export.
 - include: mount.yml
