--- a/playbooks/gluster-stop.yml
+++ b/playbooks/gluster-stop.yml
@@ -14,8 +14,5 @@
 
     - name: stop all nodes
       service:
-        name: "{{ item }}"
+        name: "glusterfs-server"
         state: "stopped"
-      with_items:
-        - "glusterfs-server"
-        - "rpcbind"
