--- a/playbooks/memcached-install.yml
+++ b/playbooks/memcached-install.yml
@@ -5,5 +5,5 @@
   roles:
     - hswong3i.memcached
     - role: hswong3i.ufw
-      ufw_to_port:
+      ufw:
         - { to_port: "{{ memcached_listen_port }}", proto: "tcp", rule: "allow" }
