--- a/playbooks/apache2-install.yml
+++ b/playbooks/apache2-install.yml
@@ -5,7 +5,7 @@
   roles:
     - hswong3i.apache2
     - role: hswong3i.ufw
-      ufw_to_port:
+      ufw:
         - { to_port: "{{ apache2_http_port }}", proto: "tcp", rule: "allow" }
         - { to_port: "{{ apache2_https_port }}", proto: "tcp", rule: "allow" }
 
