--- a/playbooks/bamboo-install.yml
+++ b/playbooks/bamboo-install.yml
@@ -22,7 +22,7 @@
     - hswong3i.bamboo
     - hswong3i.mysql_connector_java
     - role: hswong3i.ufw
-      ufw_to_port:
+      ufw:
         - { to_port: "{{ bamboo_connector_port }}", proto: "tcp", rule: "allow" }
         - { to_port: "{{ bamboo_server_port }}", proto: "tcp", rule: "allow" }
 
