--- a/playbooks/bitbucket-install.yml
+++ b/playbooks/bitbucket-install.yml
@@ -22,7 +22,7 @@
     - hswong3i.bitbucket
     - hswong3i.mysql_connector_java
     - role: hswong3i.ufw
-      ufw_to_port:
+      ufw:
         - { to_port: "{{ bitbucket_connector_port }}", proto: "tcp", rule: "allow" }
         - { to_port: "{{ bitbucket_server_port }}", proto: "tcp", rule: "allow" }
 
