--- a/playbooks/crowd-install.yml
+++ b/playbooks/crowd-install.yml
@@ -22,7 +22,7 @@
     - hswong3i.crowd
     - hswong3i.mysql_connector_java
     - role: hswong3i.ufw
-      ufw_to_port:
+      ufw:
         - { to_port: "{{ crowd_connector_port }}", proto: "tcp", rule: "allow" }
         - { to_port: "{{ crowd_server_port }}", proto: "tcp", rule: "allow" }
 
