--- a/playbooks/fisheye-install.yml
+++ b/playbooks/fisheye-install.yml
@@ -22,7 +22,7 @@
     - hswong3i.fisheye
     - hswong3i.mysql_connector_java
     - role: hswong3i.ufw
-      ufw_to_port:
+      ufw:
         - { to_port: "{{ fisheye_connector_port }}", proto: "tcp", rule: "allow" }
         - { to_port: "{{ fisheye_server_port }}", proto: "tcp", rule: "allow" }
 
