--- a/playbooks/ganesha-install.yml
+++ b/playbooks/ganesha-install.yml
@@ -5,7 +5,7 @@
   roles:
     - hswong3i.ganesha
     - role: hswong3i.ufw
-      ufw_to_port:
+      ufw:
         - { to_port: "111", proto: "tcp", rule: "allow" }
         - { to_port: "111", proto: "udp", rule: "allow" }
         - { to_port: "2049", proto: "tcp", rule: "allow" }
