--- a/playbooks/gluster-install.yml
+++ b/playbooks/gluster-install.yml
@@ -5,7 +5,7 @@
   roles:
     - hswong3i.gluster
     - role: hswong3i.ufw
-      ufw_to_port:
+      ufw:
         - { to_port: "111", proto: "tcp", rule: "allow" }
         - { to_port: "111", proto: "udp", rule: "allow" }
         - { to_port: "24007:24008", proto: "tcp", rule: "allow" }
