--- a/playbooks/jira-install.yml
+++ b/playbooks/jira-install.yml
@@ -22,7 +22,7 @@
     - hswong3i.jira
     - hswong3i.mysql_connector_java
     - role: hswong3i.ufw
-      ufw_to_port:
+      ufw:
         - { to_port: "{{ jira_connector_port }}", proto: "tcp", rule: "allow" }
         - { to_port: "{{ jira_server_port }}", proto: "tcp", rule: "allow" }
 
