--- a/playbooks/mysql-install.yml
+++ b/playbooks/mysql-install.yml
@@ -6,6 +6,6 @@
     - role: hswong3i.mysql
       when: groups['mariadb'] is not defined or inventory_hostname not in groups['mariadb']
     - role: hswong3i.ufw
-      ufw_to_port:
+      ufw:
         - { to_port: "{{ mysql_port }}", proto: "tcp", rule: "allow" }
       when: groups['mariadb'] is not defined or inventory_hostname not in groups['mariadb']
