--- a/playbooks/postgresql-install.yml
+++ b/playbooks/postgresql-install.yml
@@ -5,5 +5,5 @@
   roles:
     - hswong3i.postgresql
     - role: hswong3i.ufw
-      ufw_to_port:
+      ufw:
         - { to_port: "{{ postgresql_port }}", proto: "tcp", rule: "allow" }
