--- a/playbooks/setup-hosts.yml
+++ b/playbooks/setup-hosts.yml
@@ -9,17 +9,16 @@
     - hswong3i.tzdata
     - hswong3i.ntp
     - role: hswong3i.ufw
-      ufw_interface:
+      ufw:
         - { interface: "lo", direction: "in", rule: "allow" }
-      ufw_from_ip:
         - { from_ip: "224.0.0.0/4", rule: "allow" }
         - { from_ip: "10.0.0.0/8", rule: "allow" }
         - { from_ip: "172.16.0.0/12", rule: "allow" }
         - { from_ip: "192.168.0.0/16", rule: "allow" }
-      ufw_to_port:
         - { to_port: "22", proto: "tcp", rule: "allow" }
         - { to_port: "1024:65535", proto: "tcp", rule: "allow" }
-      ufw_direction:
         - { direction: "incoming", policy: "deny" }
         - { direction: "outgoing", policy: "allow" }
         - { direction: "routed", policy: "allow" }
+        - { logging: "on" }
+        - { state: "enabled" }
