--- a/playbooks/setup-infrastructure.yml
+++ b/playbooks/setup-infrastructure.yml
@@ -4,6 +4,7 @@
 - include: cachefilesd-install.yml
 - include: ganesha-install.yml
 - include: gluster-install.yml
+- include: haproxy-install.yml
 - include: java-install.yml
 - include: mariadb-install.yml
 - include: memcached-install.yml
