--- a/playbooks/usermin-install.yml
+++ b/playbooks/usermin-install.yml
@@ -5,5 +5,5 @@
   roles:
     - hswong3i.usermin
     - role: hswong3i.ufw
-      ufw_to_port:
+      ufw:
         - { to_port: "{{ usermin_port }}", proto: "tcp", rule: "allow" }
