--- a/playbooks/varnish-install.yml
+++ b/playbooks/varnish-install.yml
@@ -5,6 +5,6 @@
   roles:
     - hswong3i.varnish
     - role: hswong3i.ufw
-      ufw_to_port:
+      ufw:
         - { to_port: "{{ varnish_admin_port }}", proto: "tcp", rule: "allow" }
         - { to_port: "{{ varnish_listen_port }}", proto: "tcp", rule: "allow" }
