--- a/playbooks/webmin-install.yml
+++ b/playbooks/webmin-install.yml
@@ -5,5 +5,5 @@
   roles:
     - hswong3i.webmin
     - role: hswong3i.ufw
-      ufw_to_port:
+      ufw:
         - { to_port: "{{ webmin_port }}", proto: "tcp", rule: "allow" }
