--- a/playbooks/php-restart.yml
+++ b/playbooks/php-restart.yml
@@ -11,3 +11,4 @@
       with_items:
         - { name: "php5.6-fpm", state: "restarted" }
         - { name: "php7.0-fpm", state: "restarted" }
+        - { name: "php7.1-fpm", state: "restarted" }
