--- a/playbooks/php-start.yml
+++ b/playbooks/php-start.yml
@@ -10,3 +10,4 @@
       with_items:
         - { name: "php5.6-fpm", state: "started" }
         - { name: "php7.0-fpm", state: "started" }
+        - { name: "php7.1-fpm", state: "started" }
